spacing fix

--- a/src/index.css
+++ b/src/index.css
@@ -71,8 +71,8 @@ svg.cursor-pointer:hover {
 
 /*added top margin*/
 .navbar {
-  margin-bottom: 2%;
-  margin-top: 1%;
+  margin-bottom: 3%;
+  margin-top: 3%;
 }
 
 .navbar-content {
